fix spacing and line height issues

--- a/src/components/AboutContent/styles.module.scss
+++ b/src/components/AboutContent/styles.module.scss
@@ -32,7 +32,7 @@ $breakpoints: (
   grid-column: 2 / 3;
   @include proxima-semi-bold;
   font-size: 2.6rem;
-  line-height: 5.8rem;
+  line-height: 3.4rem;
   text-align: center;
   margin-top: 2rem;
 }
@@ -73,7 +73,7 @@ $breakpoints: (
 
 @include media('<tablet') {
   .container {
-    padding: 0 2rem;
+    padding: 2rem;
   }
 
   .content {
