--- a/src/components/TrustedBy/styles.module.scss
+++ b/src/components/TrustedBy/styles.module.scss
@@ -43,7 +43,7 @@ $breakpoints: (
 
 @include media('<tablet') {
   .container {
-    padding: 0 2rem;
+    padding: 4rem 2rem;
   }
 
   .content {
